--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 31 11:19:02 PST 2020
-sdk.dir=/home/nuxoll/Android/Sdk
+#Tue Mar 21 16:27:28 PDT 2023
+sdk.dir=C\:\\Users\\cardc\\AppData\\Local\\Android\\Sdk
