--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 21 17:14:59 PDT 2023
-sdk.dir=C\:\\Users\\crazy\\AppData\\Local\\Android\\Sdk
+#Tue Mar 21 17:59:34 PDT 2023
+sdk.dir=C\:\\Users\\cardc\\AppData\\Local\\Android\\Sdk
